it works! alignment correct!

--- a/resources/css/components/navigation/footer.css
+++ b/resources/css/components/navigation/footer.css
@@ -82,8 +82,13 @@ footer .body-small {
    /* structure */
    footer #flip-wrapper {
       flex-direction: row;
+      justify-content: space-between;
    }
 
+   #secondary-section {
+      flex-direction: column;
+      align-items: flex-end; 
+   }
 
    /* type */
    footer h3 {
